--- a/deepak-sir-deployment.yaml
+++ b/deepak-sir-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: deepak-sir-deployment
+  namespace: test1
   labels:
     app: nginx
 spec:
