--- a/deepak/repository.yaml
+++ b/deepak/repository.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: podinfo
-  namespace: default
+  namespace: test2
 spec:
   interval: 5m
   url: https://stefanprodan.github.io/podinfo
