--- a/deepak/release.yaml
+++ b/deepak/release.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: podinfo
-  namespace: default
+  namespace: test2
 spec:
   interval: 10m
   timeout: 5m
